--- a/requirements.in
+++ b/requirements.in
@@ -11,7 +11,7 @@ django-markdownx
 django-storages
 django_htmx
 django-allauth[socialaccount]
-django-allauth
+django-allauth[mfa]
 boto3
 pillow
 huey
