--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 asgiref==3.8.1
     # via
     #   django
+    #   django-allauth
     #   django-htmx
 asttokens==2.4.1
     # via stack-data
@@ -10,9 +11,9 @@ beautifulsoup4==4.12.3
     # via o365
 black==24.10.0
     # via -r requirements.in
-boto3==1.35.46
+boto3==1.35.47
     # via -r requirements.in
-botocore==1.35.46
+botocore==1.35.47
     # via
     #   boto3
     #   s3transfer
@@ -31,12 +32,14 @@ colorama==0.4.6
 coverage==7.6.4
     # via -r requirements.in
 cryptography==43.0.3
-    # via pyjwt
+    # via
+    #   fido2
+    #   pyjwt
 cssbeautifier==1.15.1
     # via djlint
 decorator==5.1.1
     # via ipython
-djade==1.3.1
+djade==1.3.2
     # via -r requirements.in
 django==5.1.2
     # via
@@ -49,7 +52,7 @@ django==5.1.2
     #   django-modeltranslation
     #   django-rosetta
     #   django-storages
-django-allauth==65.0.2
+django-allauth==65.1.0
     # via -r requirements.in
 django-auto-prefetch==1.10.0
     # via -r requirements.in
@@ -83,6 +86,8 @@ factory-boy==3.3.1
     # via -r requirements.in
 faker==30.8.0
     # via factory-boy
+fido2==1.1.3
+    # via django-allauth
 gunicorn==23.0.0
     # via -r requirements.in
 html-tag-names==0.1.2
@@ -162,6 +167,8 @@ python-dotenv==1.0.1
     # via -r requirements.in
 pyyaml==6.0.2
     # via djlint
+qrcode==8.0
+    # via django-allauth
 redis==5.1.1
     # via -r requirements.in
 regex==2024.9.11
